force-app/main/default/objects/ARF_WootHoops__c/ARF_WootHoops__c.object-meta.xml
<CustomObject>
    <label>ARF-WootHoop</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>ARF-WootHoops Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARF-WootHoops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>