force-app/main/default/objects/ARF_WootHoops__c/fields/Inside_of_Band__c.field-meta.xml
<CustomField>
    <fullName>Inside_of_Band__c</fullName>
    <label>Inside of Band</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>