force-app/main/default/objects/ARF_WootHoops__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ARF-WootHoops</relationshipLabel>
    <relationshipName>ARF_WootHoops</relationshipName>
    <type>Lookup</type>
</CustomField>