force-app/main/default/objects/ARF_WootHoops__c/fields/Outside_of_Band__c.field-meta.xml
<CustomField>
    <fullName>Outside_of_Band__c</fullName>
    <label>Outside of Band</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>