force-app/main/default/objects/ARF_WootHoops__c/fields/Sticker_Description__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Description__c</fullName>
    <label>Sticker Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>