force-app/main/default/objects/ARF_WootHoops__c/fields/WootHoop_Fit__c.field-meta.xml
<CustomField>
    <fullName>WootHoop_Fit__c</fullName>
    <label>WootHoop Length</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6&quot; (Youth)</fullName>
            </value>
            <value>
                <fullName>7&quot; (Adult)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>