force-app/main/default/objects/ARF_WootHoops__c/fields/WootHoop_Length__c.field-meta.xml
<CustomField>
    <fullName>WootHoop_Length__c</fullName>
    <label>WootHoop Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.5 Inch</fullName>
            </value>
            <value>
                <fullName>1 Inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>